--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.App{
+    background-color: #FFFFE0;
+    min-width: 360px;
+}
+.kurs_card{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.change_box{
+    margin: 10px 10px;
+    background-color: #fff;
+    border: 1px solid #000;
+    padding: 20px 20px;
+}
+.change_btn{
+    margin: 0 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width:840px){
+    .kurs_card{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
